# APSEP

./: .gitignore  CLAUDE.md  CMakeLists.txt  FINDINGS.md  Makefile  README.md
docs/: bottlenecks.md  optimization_prompt.md  p3_word_striding_regression.md  spt_design.md  spt_early_out_regression.md  spt_optimizations.md
src/: apose.cuh  apsep.cuh  bench_approaches.cu  bench_spt_blocked.cu  bench_spt_ipt8.cu  bench_spt_le.cu  bench_spt_p3team.cu  bench_spt_phases.cu  bench_spt_warpauto.cu  bench_spt_worst.cu  bench_sweep.cu  bench_variants.cu  main.cu  profile_bottleneck.cu  profile_lookback.cu  profile_wsnt.cu
